--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,25 @@
     "pre-commit": "lint-staged"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
+    "@loadable/component": "^5.15.3",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@supabase/supabase-js": "^2.21.0",
+    "@tanstack/react-query": "^4.29.1",
+    "@types/compose-function": "^0.0.30",
+    "antd": "^5.4.2",
+    "axios": "^1.4.0",
+    "classnames": "^2.3.2",
+    "compose-function": "^3.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@types/loadable__component": "^5.13.4",
+    "@types/node": "^18.15.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
@@ -34,8 +49,10 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.1",
     "prettier": "2.8.7",
+    "sass": "^1.62.1",
     "typescript": "^4.9.5",
     "vite": "^4.2.0",
+    "vite-plugin-dynamic-import": "^1.2.7",
     "vite-plugin-eslint": "^1.8.1"
   },
   "lint-staged": {
